Dev map zoom (#490)
* Revert "Refactor MapField and MapView for improved coordinate transformations and zoom handling"

This reverts commit 5ccc3a62e303ea22e90a5039ae0bbd9cc7a93c05.

* Revert "Add zoom button layer and refactor zoom handling in map view (#433)"

This reverts commit 8b4fee76

* Support floating zoom increments

* Fix map issues on low zoom levels (#458)

* Restore zoom buttons layer (#458)

* Update settings view usage in map view (#458)

* Don't use static number formatter (#458)

* Rearrange MapView class (#458)